# networkSecurity

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  hardening.py  pipeline.py  recon.py  vuln_analysis.py
configs/: engagement.example.yaml  model.yaml
docs/: ARCHITECTURE.md  ROADMAP-M6-professional.md  SCOPE.md  hardware-upgrade-rationale.md  how-it-works.md
docs/benchmarks/: model-selection-recon.md
docs/portfolio/: sample-report-metasploitable.md
docs/specs/: M0.1-scaffolding.md  M0.2-llm-client.md  M0.3-labshell.md  M1.1-nmap-parser.md  M1.2-recon-agent.md  M1.3-report-and-pipeline.md  M2.1-cve-lookup.md  M2.2-vuln-analysis-agent.md  M2.3-pipeline-cve-integration.md  M3.1-hardening-agent.md  M3.2-hardening-pipeline-report.md  M6.1-scope-authorization.md  M6.2-professional-report.md  M6.3-pdf-html-export.md  README.md
scripts/: labshell  labshell_rc.sh  logcmd.py  new_run.py  run.py  smoke_llm.py
tests/: test_cve_lookup.py  test_hardening_agent.py  test_llm.py  test_nmap_parser.py  test_recon_agent.py  test_report_and_pipeline.py  test_run_logging.py  test_schemas.py  test_scope.py  test_vuln_analysis_agent.py
tests/fixtures/: nmap_sample.xml
tools/: __init__.py  config.py  cve_lookup.py  llm.py  nmap_parser.py  report_render.py  run_utils.py  schemas.py  scope.py
