[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cybersec-lab"
version = "0.1.0"
description = "AI CyberSec Lab — локальна multi-agent система для етичного пентесту"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "agents*"]
